[project]
name = "talk-to-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-groq>=0.3.2",
    "streamlit>=1.45.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[project.optional-dependencies]
dev = ["black>=23.0.0"]
